--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ imageExt+'triangle-blue.jpg',
 imageExt+'triangle-green.jpg',
 imageExt+'triangle-red.jpg',
 imageExt+'triangle-white.jpg',
-imageExt+'triangle-yellow.jpg'];
+imageExt+'triangle-yellow.jpg']
 
 
 function startExperiment(data, tabletop) {
