fixed inccorect image names

--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@ imageExt+'black.jpg',
 imageExt+'bunnies.gif',
 imageExt+'circle-blue.jpg',
 imageExt+'circle-green.jpg',
-imageExt+'circle-red.png',
+imageExt+'circle-red.jpg',
 imageExt+'circle-white.jpg',
 imageExt+'circle-yellow.jpg',
-imageExt+'fireworks_left.jpg',
-imageExt+'fireworks_right.jpg',
+imageExt+'fireworks-left.jpg',
+imageExt+'fireworks-right.jpg',
 imageExt+'heart-blue.jpg',
 imageExt+'heart-green.jpg',
 imageExt+'heart-red.jpg',
