--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@ function createTrials(data, tabletop) {
   var lwl_trials = {
     type: 'audio-button-response-flexiblelocations',
     trial_duration: 6243,
+    response_ends_trial = false,
     margin_top: ['300px','300px'],
     margin_bottom: ['0px','0px'],
     margin_left: ['0px','89px'],
