remove monitor for keypress

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="jspsych-6.1.0/plugins/jspsych-fullscreen.js"></script>
   <!-- <script src="jspsych-6.1.0/papaparse.min.js"></script>  -->
   <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.0.2/papaparse.min.js"></script> -->
-  <script src="jspsych-6.1.0/plugins/jspsych-audio-button-response-flexiblelocations-keyboard.js"></script>
+  <script src="jspsych-6.1.0/plugins/jspsych-audio-button-response-flexiblelocations.js"></script>
   <!--<script src="jspsych-6.1.0/google-spreadsheet.js"></script> -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
   <link rel="stylesheet" href="jspsych-6.1.0/css/jspsych.css",type="text/css"> </link>
@@ -125,10 +125,10 @@ function createTrials(data, tabletop) {
 
 
   var lwl_trials = {
-    type: 'audio-button-response-flexiblelocations-keyboard',
+    type: 'audio-button-response-flexiblelocations',
     trial_duration: 6243,
     response_ends_trial: false,
-    pause_key: ['a'], // new
+    // pause_key: ['a'], // new
     margin_top: ['300px','300px'],
     margin_bottom: ['0px','0px'],
     margin_left: ['0px','89px'],
