--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@ jsPsych.init({
   timeline: timeline,
   // preload_audio:audio,
   preload_images:images,
+  default_iti:500,
   on_finish: function() {
     jsPsych.data.displayData();
     // save_data('yumME','V1',subject_id, jsPsych.data.dataAsCSV());
