remove old data[] ref

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ var timeline = []
 
 function createTrials(data, tabletop) {
 
-  data = data['Order_'+trial_order]['elements']
+  // data = data['Order_'+trial_order]['elements']
   console.log(data);
 
   //stim = tabletop.sheets("stimulus_sheet").toArray()
