--- a/index.html
+++ b/index.html
@@ -59,11 +59,18 @@ var trial_order = prompt("Order (1-4)","1");
 // all sheets
 // var publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTUloci3FFgv80Jq0sqMlDUJtHtQElasmdc9sy_lnw2G2uU5oeaqPU0IMMtOgXq7uF95qDbXsAJdoWq/pub?output=csv';
 
-// choose sheet
+// choose google sheet
+// if (trial_order == "1") {
+//   var publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTUloci3FFgv80Jq0sqMlDUJtHtQElasmdc9sy_lnw2G2uU5oeaqPU0IMMtOgXq7uF95qDbXsAJdoWq/pub?gid=0&single=true&output=csv';
+// } else if (trial_order == "2") {
+//   var publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTUloci3FFgv80Jq0sqMlDUJtHtQElasmdc9sy_lnw2G2uU5oeaqPU0IMMtOgXq7uF95qDbXsAJdoWq/pub?gid=1562500532&single=true&output=csv';
+// }
+
+// choose csv file
 if (trial_order == "1") {
-  var publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTUloci3FFgv80Jq0sqMlDUJtHtQElasmdc9sy_lnw2G2uU5oeaqPU0IMMtOgXq7uF95qDbXsAJdoWq/pub?gid=0&single=true&output=csv';
+  var publicSpreadsheetUrl = 'https://raw.githubusercontent.com/rpomper/zoom-test/master/orders/Order_1.csv';
 } else if (trial_order == "2") {
-  var publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTUloci3FFgv80Jq0sqMlDUJtHtQElasmdc9sy_lnw2G2uU5oeaqPU0IMMtOgXq7uF95qDbXsAJdoWq/pub?gid=1562500532&single=true&output=csv';
+  var publicSpreadsheetUrl = 'https://raw.githubusercontent.com/rpomper/zoom-test/master/orders/Order_2.csv';
 }
 
 
